Finally fixed all the java doc issues related to updating the maven javadoc plugin. Removed a really ancient class that did nothing except get tested.